gccida/g2/simplify_relational_operation
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/simplify-rtx.c:2540:37: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_relational_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                    ^
                                    enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/simplify-rtx.c:2540:52: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_relational_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                                   ^
                                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/simplify-rtx.c:2544:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v10; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/simplify-rtx.c:2577:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v43; // [rsp+18h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/simplify-rtx.c:2578:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v44; // [rsp+18h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/simplify-rtx.c:2594:13: error: expected ';' after expression
op1 = ( rtx)op0[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/simplify-rtx.c:2605:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( ( unsigned __int8 *)op0 + 2)] == MODE_CC ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/simplify-rtx.c:2617:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = mode_class_0[mode]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/simplify-rtx.c:2627:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v43 = mode_class_0[mode]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/simplify-rtx.c:2644:8: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& ( ( mode_class_0[*( ( unsigned __int8 *)v8 + 2)] & 0xFFFFFFFB) != 2 
       ^~~~~~~~~~~~
       mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/simplify-rtx.c:2645:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( ( unsigned __int8 *)v8 + 2)] != MODE_VECTOR_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/simplify-rtx.c:2678:29: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( _WORD *)v9 == 55 && mode_class_0[*( ( unsigned __int8 *)v8 + 2)] == MODE_FLOAT ) 
                            ^~~~~~~~~~~~
                            mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/simplify-rtx.c:2715:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v22 = ( __int64)v8[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/simplify-rtx.c:2736:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v27 = ( __int64)v9[1]; 
                ^~~~~
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_relational_operation/src/obj/simplify-rtx.o] Error 1
